Fix wines leyout.

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -2,3 +2,6 @@ baseURL = '/'
 languageCode = 'en-us'
 title = 'Gaelic Cemetery Vineyard - Clare Valley Wines'
 theme = 'mostar-gcw-theme'
+
+[params]
+yearofediting = '2007'
