--- a/themes/mostar-gcw-theme/hugo.toml
+++ b/themes/mostar-gcw-theme/hugo.toml
@@ -92,7 +92,7 @@ title = 'My New Hugo Site'
     rel = 'external'
 [[menu.nav]]
   name = '2009 Vintage'
-  url = 'https://wines.gaeliccemeteryvineyard.com/2009'
+  url = '/wines/2009'
   weight = 120
   parent = 'wines'
   [menu.nav.params]
