--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = '/gcv'
+baseURL = 'https://vilimz.github.io/gcv/'
 languageCode = 'en-us'
 title = 'Gaelic Cemetery Vineyard - Clare Valley Wines'
 theme = 'mostar-gcw-theme'
